[gd_scene load_steps=33 format=3 uid="uid://xwwpba04pbj4"]

[ext_resource type="Script" path="res://Mainframe/MainframeMover.gd" id="1_jco4c"]
[ext_resource type="PackedScene" uid="uid://dfqylyvtdl3do" path="res://Prefabs/EntityStatus.tscn" id="2_2r0uj"]
[ext_resource type="Script" path="res://Mainframe/Ice/SentryMind.gd" id="2_cc7e5"]
[ext_resource type="Texture2D" uid="uid://cywifay0lfcmq" path="res://Textures/Skull.png" id="3_eo0qx"]
[ext_resource type="Script" path="res://OnTrigger/DeleteSelf.gd" id="3_rp1x0"]
[ext_resource type="Script" path="res://Scripts/AnimatedSprite2D.gd" id="4_8b5v4"]
[ext_resource type="Texture2D" uid="uid://bocm4ao03u5b6" path="res://Textures/MainframeObj.png" id="5_lrfk4"]
[ext_resource type="Script" path="res://OnTrigger/DealDamage.gd" id="6_tvfqk"]
[ext_resource type="Script" path="res://OnTrigger/PlaysoundOnTrigger.gd" id="7_ptjub"]
[ext_resource type="AudioStream" uid="uid://dd6arj43wrxsw" path="res://Sound/SentryAttack.mp3" id="8_2yra7"]
[ext_resource type="Texture2D" uid="uid://5wt6lnh6b41g" path="res://Textures/Skull_Attacks.png" id="9_ka2bt"]
[ext_resource type="Script" path="res://OnTrigger/PlayAnimation.gd" id="11_2w0im"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2htv"]
atlas = ExtResource("5_lrfk4")
region = Rect2(64, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_nim48"]
atlas = ExtResource("9_ka2bt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3mro"]
atlas = ExtResource("9_ka2bt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irf0e"]
atlas = ExtResource("9_ka2bt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw6cl"]
atlas = ExtResource("9_ka2bt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2hqp"]
atlas = ExtResource("9_ka2bt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hetbs"]
atlas = ExtResource("9_ka2bt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y50lc"]
atlas = ExtResource("9_ka2bt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g1nf"]
atlas = ExtResource("9_ka2bt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ygf"]
atlas = ExtResource("9_ka2bt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs8lx"]
atlas = ExtResource("9_ka2bt")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yya7l"]
atlas = ExtResource("3_eo0qx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urth8"]
atlas = ExtResource("3_eo0qx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkvfm"]
atlas = ExtResource("3_eo0qx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca7de"]
atlas = ExtResource("3_eo0qx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrtr7"]
atlas = ExtResource("3_eo0qx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgath"]
atlas = ExtResource("3_eo0qx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hmny"]
atlas = ExtResource("3_eo0qx")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvciu"]
atlas = ExtResource("3_eo0qx")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vlvdx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nim48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3mro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irf0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw6cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2hqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y50lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g1nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ygf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs8lx")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_yya7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkvfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca7de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrtr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgath")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hmny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvciu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Sentry" type="Node2D"]
z_index = 5
z_as_relative = false

[node name="Mover" type="Node" parent="." node_paths=PackedStringArray("Host", "ES")]
script = ExtResource("1_jco4c")
Host = NodePath("..")
Dense = true
ES = NodePath("EntityStatus")

[node name="EntityStatus" parent="Mover" instance=ExtResource("2_2r0uj")]
MaxHits = 1
CurrentHits = 1

[node name="DeleteSelf" type="Node" parent="Mover/EntityStatus" node_paths=PackedStringArray("target")]
script = ExtResource("3_rp1x0")
target = NodePath("../../..")

[node name="SimpleMind" type="Node" parent="Mover" node_paths=PackedStringArray("MM", "AttackTimeout")]
script = ExtResource("2_cc7e5")
MM = NodePath("..")
AttackTimeout = NodePath("AttackTimeout")

[node name="ThinkingCycle" type="Timer" parent="Mover/SimpleMind"]
wait_time = 0.5
autostart = true

[node name="ScanSprite" type="Sprite2D" parent="Mover/SimpleMind"]
visible = false
texture = SubResource("AtlasTexture_l2htv")

[node name="AttackTimeout" type="Timer" parent="Mover/SimpleMind"]
one_shot = true

[node name="DealDamage" type="Node" parent="Mover/SimpleMind/AttackTimeout"]
script = ExtResource("6_tvfqk")

[node name="PlaySound" type="Node" parent="Mover/SimpleMind/AttackTimeout" node_paths=PackedStringArray("Host")]
script = ExtResource("7_ptjub")
sound = ExtResource("8_2yra7")
Host = NodePath("../../../..")
volume = -5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 2
z_as_relative = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vlvdx")
script = ExtResource("4_8b5v4")
AutoplayAnimation = true

[node name="PlayAnimation" type="Node" parent="AnimatedSprite2D" node_paths=PackedStringArray("animator")]
script = ExtResource("11_2w0im")
animator = NodePath("..")
animation = "attack"

[connection signal="Death" from="Mover/EntityStatus" to="Mover/EntityStatus/DeleteSelf" method="_on_entity_status_death"]
[connection signal="Attack" from="Mover/SimpleMind" to="Mover/SimpleMind/AttackTimeout/DealDamage" method="_on_simple_mind_attack"]
[connection signal="Attack" from="Mover/SimpleMind" to="Mover/SimpleMind/AttackTimeout/PlaySound" method="_on_simple_mind_attack"]
[connection signal="Attack" from="Mover/SimpleMind" to="AnimatedSprite2D/PlayAnimation" method="_on_simple_mind_attack"]
[connection signal="timeout" from="Mover/SimpleMind/ThinkingCycle" to="Mover/SimpleMind" method="_on_timer_timeout"]
[connection signal="timeout" from="Mover/SimpleMind/AttackTimeout" to="Mover/SimpleMind" method="_on_attack_timeout_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D/PlayAnimation" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="AnimationEnded" from="AnimatedSprite2D/PlayAnimation" to="AnimatedSprite2D" method="_on_play_animation_animation_ended"]
