[gd_scene load_steps=8 format=3 uid="uid://ycfpkflpescd"]

[ext_resource type="Script" path="res://Mainframe/Objects/Collectable.gd" id="1_ptbsc"]
[ext_resource type="PackedScene" uid="uid://d2qeutpdl6hjr" path="res://Mainframe/Programs/RawData.tscn" id="2_07lv3"]
[ext_resource type="Texture2D" uid="uid://bocm4ao03u5b6" path="res://Textures/MainframeObj.png" id="3_gqqmj"]
[ext_resource type="AudioStream" uid="uid://b6riawobx2355" path="res://Sound/Pickup.mp3" id="4_3qdqj"]
[ext_resource type="Script" path="res://Scripts/AudioStreamPlayer2D.gd" id="4_i85j4"]
[ext_resource type="Script" path="res://OnTrigger/PlaysoundOnTrigger.gd" id="6_5lano"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b6w6t"]
atlas = ExtResource("3_gqqmj")
region = Rect2(224, 0, 32, 32)

[node name="Collectable" type="Node2D"]
script = ExtResource("1_ptbsc")
Prog = ExtResource("2_07lv3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
texture_filter = 1
texture = SubResource("AtlasTexture_b6w6t")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3qdqj")
script = ExtResource("4_i85j4")

[node name="PlaysoundOnTrigger" type="Node" parent="." node_paths=PackedStringArray("Host")]
script = ExtResource("6_5lano")
sound = ExtResource("4_3qdqj")
Host = NodePath("..")

[connection signal="PickedUp" from="." to="PlaysoundOnTrigger" method="_on_collectable_picked_up"]
