[gd_scene load_steps=7 format=3 uid="uid://d2vq8ry3bdi4v"]

[ext_resource type="Script" path="res://Mainframe/MainframeMover.gd" id="1_57lg8"]
[ext_resource type="Script" path="res://OnTrigger/ToogleDoorOpen.gd" id="2_5lvrq"]
[ext_resource type="Script" path="res://OnTrigger/PlaysoundOnTrigger.gd" id="3_os2q8"]
[ext_resource type="Texture2D" uid="uid://bocm4ao03u5b6" path="res://Textures/MainframeObj.png" id="3_otg8p"]
[ext_resource type="AudioStream" uid="uid://c6kndfklr0pst" path="res://Sound/Switch.mp3" id="4_8irxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_if115"]
atlas = ExtResource("3_otg8p")
region = Rect2(192, 0, 32, 32)

[node name="SwitchMM" type="Node2D"]

[node name="MainframeMover" type="Node" parent="." node_paths=PackedStringArray("Host")]
script = ExtResource("1_57lg8")
Host = NodePath("..")

[node name="ToogleDoor" type="Node" parent="."]
script = ExtResource("2_5lvrq")

[node name="Sound" type="Node" parent="." node_paths=PackedStringArray("Host")]
script = ExtResource("3_os2q8")
sound = ExtResource("4_8irxw")
Host = NodePath("..")
volume = -5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 6
z_as_relative = false
texture_filter = 1
texture = SubResource("AtlasTexture_if115")

[connection signal="Interacted" from="MainframeMover" to="ToogleDoor" method="_on_mainframe_mover_interacted"]
[connection signal="Interacted" from="MainframeMover" to="Sound" method="_on_mainframe_mover_interacted"]
