[gd_scene load_steps=7 format=3 uid="uid://dl67f2m5y88in"]

[ext_resource type="PackedScene" uid="uid://bfiy8buyjrdlb" path="res://Mainframe/Programs/Program.tscn" id="1_6ne8b"]
[ext_resource type="Script" path="res://Mainframe/Programs/Lance.gd" id="2_bj4d5"]
[ext_resource type="Texture2D" uid="uid://clg34lje236ie" path="res://Textures/ProgramIcons.png" id="3_v1fvg"]
[ext_resource type="Script" path="res://OnTrigger/PlaysoundOnTrigger.gd" id="4_6uihu"]
[ext_resource type="AudioStream" uid="uid://dima4gela7o83" path="res://Sound/Lance.mp3" id="5_asbo0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6arh"]
atlas = ExtResource("3_v1fvg")
region = Rect2(0, 0, 64, 64)

[node name="Lance" instance=ExtResource("1_6ne8b")]
script = ExtResource("2_bj4d5")
Name = "Lance"
Description = "Program that force doors open"
requiredPWR = 4

[node name="Sprite2D" parent="." index="0"]
texture_filter = 1
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_n6arh")

[node name="Playsound" type="Node" parent="." index="2" node_paths=PackedStringArray("Host")]
script = ExtResource("4_6uihu")
sound = ExtResource("5_asbo0")
Host = NodePath("..")

[connection signal="ProgramUsed" from="." to="Playsound" method="_on_lance_program_used"]
